k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eappointment
  labels:
    name: eappointment
    environment: production
